django-todo-cicd/k8s/deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:

  name: todo-deployment

  labels:

    app: todo-app

spec:

  replicas: 3

  selector:

    matchLabels:

      app: todo-app

  template:

    metadata:

      labels:

        app: todo-app

    spec:

      containers:

      - name: todo-app

        image: muzafferjoya/todoapp:latest

        ports:

        - containerPort: 8000
