django-todo-cicd/k8s/pod.yaml
apiVersion: v1

kind: Pod

metadata:

  name: todo-pod

spec:

  containers:

  - name: todo-app

    image: muzafferjoya/todoapp:latest

    ports:

    - containerPort: 8000
