django-todo-cicd/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-todo-app
spec:
  rules:
  - host: "devops.jd-dev.net"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: todo-service
            port:
              number: 80
#  - host: "*.domain.com"
#    http:
#      paths:
#      - pathType: Prefix
#        path: "/test"
#        backend:
#          service:
#            name: reddit-clone-service
#            port:
#              number: 3000
